@@ -220,6 +220,9 @@ presented.
 \fBimport\fP \fIRepository-URL\fP [\fIPath\fP] [\fINew-Repository-Entry\fP]
 Import a file or tree into the repository.
 .TP
+\fBinfo\fP \fItarget1\fP [\fItarget2\fP ...]
+Print info about a versioned resource.
+.TP
 \fBlog\fP [\fIurl\fP] [\fIfile|dir\fP]
 Show log messages (and affected entities) for commits in which any of the
 entities in question changed.  If none were specified, then recursive
